// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense totalling $94.34 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $94.34
  </h1>
</div>
`;

exports[`should render ExpensesSummary with 2 expense totalling $94.34 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $94.34
  </h1>
</div>
`;
